--- a/main.html
+++ b/main.html
@@ -15,14 +15,19 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" placeholder="Email" required><br><br>
 
-        <fieldset>
+		<label for="gender_m">Male</label>
+		<input type="radio" id="gender_m" name="gender" required><br><br>
+		
+		<label for="gender_f">Female</label>
+		<input type="radio" id="gender_f" name="gender" required><br><br>
+<!--         <fieldset>
             <legend>Gender:</legend>
             <input type="radio" id="gender_m" name="gender" required>
             <label for="gender_m">Male</label>
 
             <input type="radio" id="gender_f" name="gender" required>
             <label for="gender_f">Female</label>
-        </fieldset><br>
+        </fieldset><br> -->
 
         <label for="cars">Car Brands:</label>
         <select id="cars" name="cars" required>
