--- a/main.html
+++ b/main.html
@@ -50,10 +50,10 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" placeholder="Password" required><br><br>
 
-        <label>
-            <input type="checkbox" id="tos" name="tos" required>
-            I agree to the TOS
-        </label><br><br>
+        <label for="TOS">I agree to the TOS </label><br><br>
+        <input type="checkbox" id="tos" name="tos" required>
+          
+       
 
         <button type="submit">Submit</button>
     </form>
