--- a/main.html
+++ b/main.html
@@ -20,14 +20,6 @@
 		
 		<label for="gender_f">Female</label>
 		<input type="radio" id="gender_f" name="gender" required><br><br>
-<!--         <fieldset>
-            <legend>Gender:</legend>
-            <input type="radio" id="gender_m" name="gender" required>
-            <label for="gender_m">Male</label>
-
-            <input type="radio" id="gender_f" name="gender" required>
-            <label for="gender_f">Female</label>
-        </fieldset><br> -->
 
         <label for="cars">Car Brands:</label>
         <select id="cars" name="cars" required>
@@ -50,7 +42,7 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" placeholder="Password" required><br><br>
 
-        <label for="TOS">I agree to the TOS </label><br><br>
+        <label for="tos">I agree to the TOS</label><br><br>
         <input type="checkbox" id="tos" name="tos" required>
           
        
